@startuml
    class CreateClientUseCase{
        + client_repository : ClientRepository
        + otp_repository : OTPRepository
        + execute(first_name: str, last_name: str, birth_date: str, email: str, phone_number: str, address: str, password: str,) : UseCaseResult
    }

    class UseCaseResult{
       + success: bool
       + message: string
    }

    class ClientRepository <<abstract>> {
        + add_user(client: Client) : Result
        + update_user_status(email: str, new_status: str) : Result
        + client_is_active(email: str) : bool
    }

    class Result{
        + success : bool
        + code : int
    }

    class ClientDTO{
        + success : bool
        + code : int
        + status : string
    }

    class OTPDTO {
        +secret : str
        +attempts : int
        +validated : bool
    }

    class Client {
        +first_name : str
        +last_name : str
        +address : str
        +birth_date : str
        +email : str
        +phone_number : str
        +status : str
        +password : str
    }

    class OTPRepository <<abstract>> {
        + create_passcode(client: Client) : OTPDTO
        + send_passcode(email: str, passcode: str) : bool
        + verify_passcode(email: str, passcode: str) : OTPDTO
        + register_secret(email: str, secret: str) : bool
    }

    class DjangoClientRepository {
        -dao : ClientDAO
        +add_user(client: Client) : ClientDTO
        +update_user_status(email: str, new_status: str) : ClientDTO
        +client_is_active(email: str) : bool
    }

    class MySQLClientOTPDAO {
        +set_secret_key(email: str, secret: str) : OTPDTO
        +get_secret_key(email: str) : OTPDTO
        +delete_passcode(email: str) : OTPDTO
        +increment_attempts(email: str) : OTPDTO
    }

    class ClientOTPDAO {
        +set_secret_key(email: str, secret: str) : OTPDTO
        +get_secret_key(email: str) : OTPDTO
        +delete_passcode(email: str) : OTPDTO
        +increment_attempts(email: str) : OTPDTO
    }

    class EmailOTPRepository {
        -dao : ClientOTPDAO
        +send_passcode(email: str, passcode: str) : bool
        +verify_passcode(user_email: str, passcode: str) : OTPDTO
        +register_secret(email: str, secret: str) : bool
    }

    class BaseOTPRepository {
        +create_passcode(client: Client) : OTPDTO
        +generate_passcode() : str
    }

    class MySQLClientDAO {
        +add_user(client: Client) : ClientDTO
        +update_status(email: str, new_status: str) : ClientDTO
        +get_status(email: str) : ClientDTO
    }


    class ClientDAO{
        +add_user(client: Client) : ClientDTO
        +update_status(email: str, new_status: str) : ClientDTO
        +get_status(email: str) : ClientDTO
    }

MySQLClientOTPDAO --|> ClientOTPDAO
EmailOTPRepository --|> BaseOTPRepository
EmailOTPRepository --|> OTPDTO
EmailOTPRepository --> MySQLClientOTPDAO
BaseOTPRepository --|> OTPRepository
DjangoClientRepository --|> ClientRepository
DjangoClientRepository --> ClientDTO
DjangoClientRepository --> Client
ClientDAO--> ClientDTO
ClientDTO --|> Result
DjangoClientRepository --> MySQLClientDAO
MySQLClientDAO --|> ClientDAO
CreateClientUseCase --> DjangoClientRepository
CreateClientUseCase --> EmailOTPRepository
CreateClientUseCase --> OTPDTO
CreateClientUseCase --> Client
CreateClientUseCase --> UseCaseResult
ClientOTPDAO --> OTPDTO

@enduml